--- a/src/app/registro-cliente/registro-cliente.component.css
+++ b/src/app/registro-cliente/registro-cliente.component.css
@@ -24,6 +24,22 @@
     width: 300px;
 }
 
+.example-icon {
+    padding: 0 14px;
+  }
+  
+  .example-spacer {
+    flex: 1 1 auto;
+  }
+
+  section {
+    padding: 30px;
+  }
+  
+  mat-form-field {
+    padding: 10px;
+  }
+
 
 
 #container {
