--- a/src/app/registro-cliente/registro-cliente.component.html
+++ b/src/app/registro-cliente/registro-cliente.component.html
@@ -1,4 +1,12 @@
+<mat-toolbar color="primary">
+  <mat-toolbar-row>
+    <span>Registro de usuarios</span>
+    <span class="example-spacer"></span>
+    <i class="material-icons">person</i>
+  </mat-toolbar-row>
+</mat-toolbar>
 <section class="signup-form">
+    <mat-card>
     <form fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="10px" [formGroup]="clienteForm" (ngSubmit)="onSubmit()">
       <mat-form-field>
         <input type="text" 
@@ -7,7 +15,7 @@
         autocomplete="off"
         formControlName="id"
         (keyup)="searchId(clienteForm.get('id').value)">
-        <mat-error *ngFor="let validation of account_validation_messages.id">
+        <mat-error *ngFor="let validation of cliente_validation_messages.id">
           <mat-error class="error-message" *ngIf="clienteForm.get('id').hasError(validation.type) && (clienteForm.get('id').dirty || clienteForm.get('id').touched)">{{validation.message}}</mat-error>
         </mat-error>
       </mat-form-field>
@@ -17,15 +25,25 @@
         placeholder="Sus nombres y apellidos" 
         autocomplete="off"
         formControlName="fullName">
-        <mat-error *ngFor="let validation of account_validation_messages.fullName">
+        <mat-error *ngFor="let validation of cliente_validation_messages.fullName">
           <mat-error class="error-message" *ngIf="clienteForm.get('fullName').hasError(validation.type) && (clienteForm.get('fullName').dirty || clienteForm.get('fullName').touched)">{{validation.message}}</mat-error>
         </mat-error>
       </mat-form-field>
+      <mat-form-field>
+        <input 
+          matInput 
+          placeholder="Su fecha de nacimiento"
+          formControlName="dateOfBirth" 
+          [matDatepicker]="picker"
+          [max]="maxDate">
+        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+        <mat-datepicker #picker></mat-datepicker>
+        <mat-error *ngFor="let validation of cliente_validation_messages.dateOfBirth">
+          <mat-error class="error-message" *ngIf="clienteForm.get('dateOfBirth').hasError(validation.type) && (clienteForm.get('dateOfBirth').dirty || clienteForm.get('dateOfBirth').touched)">{{validation.message}}</mat-error>
+        </mat-error>
+      </mat-form-field> 
       <button type="submit" mat-raised-button color="primary" [disabled]="!isValid()">Submit</button>
+      <button *ngIf="credito" [routerLink]="['/solicitud', clienteForm.get('id').value]" mat-raised-button color="accent">Solicitar un crédito</button>
     </form>
+  </mat-card>
   </section>
-  <!-- <section id="container">
-    <div id="child1" class="child"></div>
-    <div id="child2" class="child"></div>
-    <div id="child3" class="child"></div>
-  </section> -->
