--- a/src/app/solicitud-credito/solicitud-credito.component.html
+++ b/src/app/solicitud-credito/solicitud-credito.component.html
@@ -1,12 +1,14 @@
-<mat-toolbar color="primary">
-    <mat-toolbar-row>
-      <span>Solicitud y aprobación de créditos</span>
-      <span class="example-spacer"></span>
-      <i class="material-icons">money</i>
-    </mat-toolbar-row>
-  </mat-toolbar>
-  <section class="signup-form">
+  <section class="solicitud-form">
       <mat-card>
+      <mat-card-header>
+        <mat-toolbar color="accent">
+          <mat-toolbar-row>
+            <span>Solicite un crédito</span>
+            <span class="example-spacer"></span>
+            <i class="material-icons">money</i>
+          </mat-toolbar-row>
+        </mat-toolbar>
+      </mat-card-header>
       <form fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="10px" [formGroup]="solicitudForm" (ngSubmit)="onSubmit()">
         <mat-form-field>
           <input type="text" 
