--- a/src/app/lista-creditos/lista-creditos.component.html
+++ b/src/app/lista-creditos/lista-creditos.component.html
@@ -30,7 +30,7 @@
 
       <ng-container matColumnDef="companyNIT">
         <mat-header-cell *matHeaderCellDef mat-sort-header> NIT Compañía </mat-header-cell>
-        <mat-cell *matCellDef="let element"> {{ element.companyName }} </mat-cell>
+        <mat-cell *matCellDef="let element"> {{ element.companyNIT }} </mat-cell>
       </ng-container>
 
       <ng-container matColumnDef="salary">
